# gullivers-router

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: publish-image.yml
artifacts/training/: router.npz  router_metrics.json
examples/: practice_answer_set.json  practice_tasks.json  tasks.json
models/: .gitkeep
scripts/: hard_route_categories.py
src/gullivers_router/: __init__.py  __main__.py  cli.py  config.py  model_selection.py  practice.py
src/gullivers_router/inference/: __init__.py  base.py  factory.py  fireworks_batch.py  llama_batch.py  llama_cpp.py  openai_compat.py  structured.py  truncation.py
src/gullivers_router/router/: __init__.py  deterministic_math.py  model.py  ner.py
src/gullivers_router/training/: __init__.py  combine.py  dataset.py  embed.py  evaluate.py  generate.py  judge.py  labels.py  pipeline.py  router.py  store.py
tests/: __init__.py  test_cli.py  test_combine.py  test_config.py  test_dataset.py  test_embed.py  test_examples.py  test_factory.py  test_generate.py  test_judge.py  test_labels.py  test_model_selection.py  test_ner.py  test_openai_compat.py  test_practice.py  test_router_evaluate.py  test_router_model.py  test_router_train.py  test_runtime_router.py  test_store.py  test_truncation.py
