[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gullivers-router"
version = "0.2.9"
description = "A low-cost routing system that splits traffic between a free local model and a heavy-duty cloud AI based on query difficulty."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "dateparser>=1.4.1",
    "huggingface-hub",
    "llama-cpp-python",
    "numpy",
    "openai",
    "pydantic",
    "python-dotenv",
]

[project.scripts]
gullivers-router = "gullivers_router.cli:main"

[tool.uv]
default-groups = ["dev", "training"]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "ruff",
    "ty",
]
training = [
    "datasets",
    "joblib",
    "scikit-learn",
    "tqdm",
]

[[tool.uv.index]]
name = "llama-vulkan"
url = "https://abetlen.github.io/llama-cpp-python/whl/vulkan"
explicit = true

[tool.uv.sources]
llama-cpp-python = { index = "llama-vulkan" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Let Ruff format manage trailing commas to avoid formatter/linter churn.
    "CPY001", # Do not require copyright headers in this small application.
    "D203", # Prefer no blank line before class docstrings; this conflicts with D211.
    "D213", # Prefer multi-line docstring summaries on the first line; this conflicts with D212.
    "ISC001", # Let Ruff format manage implicit string concatenation spacing.
    "T201", # CLI entry points should be allowed to print user-facing output.
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN001", # Pytest fixture annotations add noise to small tests.
    "ANN002", # Test helper *args annotations add noise.
    "ANN003", # Test helper **kwargs annotations add noise.
    "ANN201", # Test functions do not need return annotations when they only assert behavior.
    "ANN202", # Local test helpers do not need return annotations.
    "ANN204", # Test double __init__ methods do not need return annotations.
    "ARG001", # Test double functions mirror real signatures with unused arguments.
    "ARG002", # Test double methods mirror real signatures with unused arguments.
    "ARG005", # Monkeypatch lambdas mirror real signatures with unused arguments.
    "EM101", # Test doubles may raise literal errors inline.
    "SLF001", # Tests may assert on private attributes to verify construction.
    "D100", # Test modules can be named clearly without module docstrings.
    "D101", # Test double classes do not need docstrings.
    "D102", # Test double methods do not need docstrings.
    "D103", # Test function names describe behavior without extra docstrings.
    "D107", # Test double __init__ methods do not need docstrings.
    "PLR2004", # Literal expected values keep small tests readable.
    "S101", # Pytest assertions are the standard test assertion style.
]
